@@ -17,8 +17,10 @@ apport (0.111) UNRELEASED; urgency=low
   * apport/report.py, test_add_gdb_info_script(): Use bash, not dash as test
     program for core dumping; stack trace is awkwardly bad with dash, so that
     the test case cannot really work any more.
+  * Add package-hooks/source_linux.py: Package hook for collecting kernel
+    related information. By Matt Zimmerman, thank you! (LP: #251441)
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 24 Jul 2008 17:59:43 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 24 Jul 2008 18:54:40 +0200
 
 apport (0.110) intrepid; urgency=low
 
